# engineering-practices-in-ml

./: .gitignore  .pre-commit-config.yaml  01_REPORT.md  Dockerfile  README.md  dvc.yaml  pyproject.toml
configs/: config.yaml  data.yaml  training.yaml
configs/model/: gb.yaml  lr.yaml
data/: raw.dvc
reports/: 01_REPORT.md  02_REPORT.md  03_REPORT.md  04_REPORT.md  quickstart.md
src/: configs.py  evaluate.py  mlflow_utils.py  preprocess.py  train.py
