[tool.poetry]
name = "Heart Disease Classification"
version = "0.1.0"
description = "Data Science project template"
authors = ["Екатерина С."]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

pandas = "^2.0.0"
numpy = "^1.26.0"
mlflow = "^3.7.0"
scikit-learn = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.12.0"
ruff = "^0.1.6"
mypy = "^1.8.0"
bandit = "^1.7.5"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------------
# Black configuration
# ------------------------------
[tool.black]
line-length = 88
target-version = ["py310", "py311"]

# ------------------------------
# isort configuration
# ------------------------------
[tool.isort]
profile = "black"
line_length = 88

# ------------------------------
# Ruff configuration
# ------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"

# ------------------------------
# MyPy configuration
# ------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

# ------------------------------
# Bandit configuration
# ------------------------------
[tool.bandit]
exclude_dirs = ["tests"]
